@@ -9,6 +9,8 @@ build_requires:
   Module::Build::FFI: '0.18'
 configure_requires:
   ExtUtils::CBuilder: '0'
+  ExtUtils::CppGuess: '0'
+  File::Which: '0'
   Module::Build: '0.38'
   Module::Build::FFI: '0.18'
 dynamic_config: 1
@@ -26,8 +28,8 @@ provides:
     file: lib/FFI/Platypus/Lang/CPP.pm
     version: '0.02'
 requires:
+  FFI::ExtractSymbols: '0'
   FFI::Platypus: '0.18'
-  Parse::nm: '0'
   perl: '5.008001'
 resources:
   bugtracker: http://github.com/plicease/FFI-Platypus-Lang-CPP/issues
